# DuplexKit

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  init.sh  package-lock.json  package.json  tsconfig.json
docs/: overview.md
docs/adr/: 2026-05-17-backend-planner-tool-calls.md  2026-05-17-interruption-and-replanning.md  2026-05-17-spell-tool-protocol.md
docs/architecture/: api-integrations.md  runtime.md
harness/: bootstrap-contract.md  decisions.md  evaluator-rubric.md  feature_list.json  observability.md  progress.md  quality.md  session-handoff.md
mobile-demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mobile-demo/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
mobile-demo/src-tauri/capabilities/: default.json
mobile-demo/src-tauri/src/: lib.rs  main.rs
public/: app.js  index.html  styles.css
scripts/: generate-audio-fixtures.mjs  harness-check.sh  inject-realtime-fixture.mjs  local-smoke.sh  mock-smoke.sh  navigation-progress-local-smoke.sh  navigation-progress-smoke.mjs  raw-realtime-demo.mjs  realtime-bridge-smoke.mjs  realtime-fixture-test.mjs  realtime-smoke.mjs
src/: clientDebugLogs.ts  config.ts  duplexService.ts  errors.ts  jingongRooms.ts  protocol.ts  realtimeDebugFixtures.ts  realtimeTraceLogs.ts  runtimeSettings.ts  server.ts  sessionLogs.ts  toolPlanner.ts  volcRealtime.ts
tests/: config.test.ts  duplexService.test.ts  fallbackTts.test.ts  jingongRoomResolver.test.ts  protocol.test.ts  realtimeFixtures.test.ts  server.test.ts  toolPlanner.test.ts  volcengineParsers.test.ts
(+26 files in other folders)
