[package]
name = "duplexkit-mobile-demo"
version = "0.1.0"
description = "Minimal mobile demo for DuplexKit backend validation"
authors = ["DuplexKit"]
edition = "2021"

[lib]
name = "duplexkit_mobile_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
